<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlayAnimationActivity">


    <Button
        android:id="@+id/back_button"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginBottom="423dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:onClick="onButtonClick"
        android:text="@string/back"
        android:textColor="@color/Blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shortcut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energy_progressbar" />

    <ToggleButton
        android:id="@+id/wall_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="539dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:text="@string/togglebutton"
        android:textColor="@color/Blue"
        android:textOff="@string/show_walls"
        android:textOn="@string/hide_walls"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/map_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/map_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="539dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:text="@string/togglebutton"
        android:textColor="@color/Blue"
        android:textOff="@string/show_map"
        android:textOn="@string/hide_map"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/solution_toggle"
        app:layout_constraintStart_toEndOf="@+id/wall_toggle"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/solution_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="539dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:text="@string/togglebutton"
        android:textColor="@color/Blue"
        android:textOff="@string/show_solution"
        android:textOn="@string/hide_solution"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/map_toggle"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/energy_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="256dp"
        android:layout_height="16dp"
        android:layout_marginBottom="475dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/energy_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_toggle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/energy_text"
        android:layout_width="78dp"
        android:layout_height="19dp"
        android:layout_marginBottom="473dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:text="@string/energy_level"
        android:textColor="@color/Blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/energy_progressbar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shortcut"
        android:layout_width="105dp"
        android:layout_height="36dp"
        android:layout_marginBottom="423dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:onClick="onButtonClick"
        android:text="@string/shortcut"
        android:textColor="@color/Blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toBottomOf="@+id/energy_progressbar" />

    <ToggleButton
        android:id="@+id/play_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="162dp"
        android:layout_marginLeft="161dp"
        android:layout_marginRight="162dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="350dp"
        android:text="@string/togglebutton"
        android:textOff="@string/start_robot"
        android:textOn="@string/pause_robot"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:onClick="onButtonClick"
        android:textColor="@color/Blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energy_progressbar" />

    <edu.wm.cs.cs301.elise.amazebyelise.generation.MazePanel
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

        android:background="#666666"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>