<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlayManuallyActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginBottom="306dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:onClick="onButtonClick"
        android:text="@string/back"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toTopOf="@+id/left_button"
        app:layout_constraintEnd_toStartOf="@+id/shortcut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wall_toggle" />

    <ToggleButton
        android:id="@+id/wall_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="539dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:text="@string/togglebutton"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        android:textOff="@string/show_walls"
        android:textOn="@string/hide_walls"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/map_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/map_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="539dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:text="@string/togglebutton"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        android:textOff="@string/show_map"
        android:textOn="@string/hide_map"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/solution_toggle"
        app:layout_constraintStart_toEndOf="@+id/wall_toggle"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/solution_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="539dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:text="@string/togglebutton"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        android:textOff="@string/show_solution"
        android:textOn="@string/hide_solution"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/map_toggle"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/down_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:text="@string/down"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_button"
        app:layout_constraintStart_toEndOf="@+id/left_button"
        app:layout_constraintTop_toBottomOf="@+id/up_button" />

    <Button
        android:id="@+id/up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="400dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:onClick="onButtonClick"
        android:text="@string/up"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toTopOf="@+id/down_button"
        app:layout_constraintEnd_toStartOf="@+id/right_button"
        app:layout_constraintStart_toEndOf="@+id/left_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="11dp"
        android:layout_marginLeft="62dp"
        android:layout_marginRight="11dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="8dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:onClick="onButtonClick"
        android:text="@string/left"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/down_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_button" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="63dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="63dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:onClick="onButtonClick"
        android:text="@string/right"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/down_button"
        app:layout_constraintTop_toBottomOf="@+id/up_button" />

    <Button
        android:id="@+id/shortcut"
        android:layout_width="105dp"
        android:layout_height="36dp"
        android:layout_marginBottom="307dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="24dp"
        android:alpha="0.35"
        android:background="@drawable/button_pressed"
        android:onClick="onButtonClick"
        android:text="@string/shortcut"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toTopOf="@+id/right_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toBottomOf="@+id/solution_toggle" />

    <edu.wm.cs.cs301.elise.amazebyelise.generation.MazePanel
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

        android:background="#666666"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/energy_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="176dp"
        android:layout_height="28dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/shortcut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_toggle"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/energy_text"
        android:layout_width="145dp"
        android:layout_height="21dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/shortcut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/energy_progressbar"
        app:layout_constraintTop_toBottomOf="@+id/map_toggle"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>