<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_amaze"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.wm.cs.cs301.elise.amazebyelise.gui.AMazeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <ImageView
        android:id="@+id/Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/maze_title_bg"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toEndOf="@+id/skill_level"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/skill_level"
        android:layout_width="194dp"
        android:layout_height="26dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/back"
        android:paddingLeft="16dp"
        android:text="@string/choose_a_skill_level"
        android:textColor="@color/White"
        android:textSize="16sp"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toTopOf="@+id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_button" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="252dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:max="9"
        android:progressDrawable="@drawable/custom_seekbar"
        app:layout_constraintBottom_toTopOf="@+id/builder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_level" />

    <TextView
        android:id="@+id/builder"
        android:layout_width="241dp"
        android:layout_height="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/back"
        android:paddingLeft="16dp"
        android:text="@string/choose_a_maze_builder"
        android:textColor="@color/White"
        android:textSize="16sp"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toTopOf="@+id/spinner_builder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

    <Spinner
        android:id="@+id/spinner_builder"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:paddingLeft="16dp"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toTopOf="@+id/driver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/builder" />

    <TextView
        android:id="@+id/driver"
        android:layout_width="227dp"
        android:layout_height="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back"
        android:paddingLeft="16dp"
        android:text="@string/choose_a_robot_driver"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_driver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_builder" />

    <Spinner
        android:id="@+id/spinner_driver"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:paddingLeft="16dp"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toTopOf="@+id/enter_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driver" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_pressed"
        android:text="@string/enter_the_maze"
        android:textColor="@color/White"
        app:fontFamily="@font/aclonica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_driver" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="497dp"
        android:layout_height="161dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/skill_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/game_logo" />

</android.support.constraint.ConstraintLayout>
